myK8S/homepage/homepage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: personal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:latest
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              memory: 256Mi
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: /app/config/settings.yaml
              subPath: settings.yaml
            - name: config
              mountPath: /app/config/widgets.yaml
              subPath: widgets.yaml
            - name: config
              mountPath: /app/config/services.yaml
              subPath: services.yaml
            - name: config
              mountPath: /app/config/bookmarks.yaml
              subPath: bookmarks.yaml
            - name: config
              mountPath: /app/config/kubernetes.yaml
              subPath: kubernetes.yaml
            - name: config
              mountPath: /app/config/docker.yaml
              subPath: docker.yaml
            - name: config
              mountPath: /app/config/custom.css
              subPath: custom.css
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: homepage-config
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: File
