myK8S/homepage/homepage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-svc
  namespace: personal
spec:
  selector:
    app: homepage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
